kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80, "HTTPS": 443}]'
    # TODO: envsubstなどで変数を置換したい
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:${region}:${account_id}:certificate/${alb_certificate_id}"
    alb.ingress.kubernetes.io/ssl-policy: "ELBSecurityPolicy-2016-08"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
